Extend monograph publication request create endpoint support so that both v1 and v2 schemas are supported
